fix: repl scrollbars overlap with repl content Fixes 3411
this also
- hides the timestamp for processing blocks when the sidecar is open
- modifies spinner color to make it more contrasty

--- a/packages/core/web/css/carbon-overrides-common.css
+++ b/packages/core/web/css/carbon-overrides-common.css
@@ -95,7 +95,7 @@ body[kui-theme-style] .bx--link:hover {
 }
 
 .repl-block.processing .repl-prompt-right-element-status-icon .kui--icon-processing svg circle.bx--loading__stroke-kui {
-  stroke: var(--color-base0C);
+  /* stroke: var(--color-base0C); */
   stroke-dashoffset: 30;
 }
 
